@@ -1,3 +1,9 @@
+2004-09-02  Alan Modra  <amodra@bigpond.net.au>
+
+	* elf64-ppc.c (ppc64_elf_get_synthetic_symtab): Use static_syms passed
+	in when reading relocs, not our sorted syms.  Remove unnecessary
+	var.
+
 2004-08-31  Eric Botcazou  <ebotcazou@libertysurf.fr>
 
 	* elf.c (special_sections): Add .gnu.linkonce.b modelled on .bss.
